constantine-rust/constantine-sys/src/bindings32.rs

extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_neg_in_place(P: *mut bn254_snarks_g1_jac);
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_cneg_in_place(P: *mut bn254_snarks_g1_jac, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_sum(
        r: *mut bn254_snarks_g1_jac,
        P: *const bn254_snarks_g1_jac,
        Q: *const bn254_snarks_g1_jac,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_add_in_place(
        P: *mut bn254_snarks_g1_jac,
        Q: *const bn254_snarks_g1_jac,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_diff(
        r: *mut bn254_snarks_g1_jac,
        P: *const bn254_snarks_g1_jac,
        Q: *const bn254_snarks_g1_jac,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_double(
        r: *mut bn254_snarks_g1_jac,
        P: *const bn254_snarks_g1_jac,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_double_in_place(P: *mut bn254_snarks_g1_jac);
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_affine(
        dst: *mut bn254_snarks_g1_aff,
        src: *const bn254_snarks_g1_jac,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_from_affine(
        dst: *mut bn254_snarks_g1_jac,
        src: *const bn254_snarks_g1_aff,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_batch_affine(
        dst: *const bn254_snarks_g1_aff,
        src: *const bn254_snarks_g1_jac,
        n: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_scalar_mul_big_coef(
        P: *mut bn254_snarks_g1_jac,
        scalar: *const big254,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_scalar_mul_fr_coef(
        P: *mut bn254_snarks_g1_jac,
        scalar: *const bn254_snarks_fr,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_scalar_mul_big_coef_vartime(
        P: *mut bn254_snarks_g1_jac,
        scalar: *const big254,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_scalar_mul_fr_coef_vartime(
        P: *mut bn254_snarks_g1_jac,
        scalar: *const bn254_snarks_fr,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_multi_scalar_mul_big_coefs_vartime(
        r: *mut bn254_snarks_g1_jac,
        coefs: *const big254,
        points: *const bn254_snarks_g1_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bn254_snarks_g1_jac,
        coefs: *const bn254_snarks_fr,
        points: *const bn254_snarks_g1_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_is_eq(
        P: *const bn254_snarks_g1_prj,
        Q: *const bn254_snarks_g1_prj,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_is_neutral(P: *const bn254_snarks_g1_prj) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_set_neutral(P: *mut bn254_snarks_g1_prj);
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_ccopy(
        P: *mut bn254_snarks_g1_prj,
        Q: *const bn254_snarks_g1_prj,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_neg(P: *mut bn254_snarks_g1_prj, Q: *const bn254_snarks_g1_prj);
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_neg_in_place(P: *mut bn254_snarks_g1_prj);
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_cneg_in_place(P: *mut bn254_snarks_g1_prj, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_sum(
        r: *mut bn254_snarks_g1_prj,
        P: *const bn254_snarks_g1_prj,
        Q: *const bn254_snarks_g1_prj,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_add_in_place(
        P: *mut bn254_snarks_g1_prj,
        Q: *const bn254_snarks_g1_prj,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_diff(
        r: *mut bn254_snarks_g1_prj,
        P: *const bn254_snarks_g1_prj,
        Q: *const bn254_snarks_g1_prj,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_double(
        r: *mut bn254_snarks_g1_prj,
        P: *const bn254_snarks_g1_prj,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_double_in_place(P: *mut bn254_snarks_g1_prj);
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_affine(
        dst: *mut bn254_snarks_g1_aff,
        src: *const bn254_snarks_g1_prj,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_from_affine(
        dst: *mut bn254_snarks_g1_prj,
        src: *const bn254_snarks_g1_aff,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_batch_affine(
        dst: *const bn254_snarks_g1_aff,
        src: *const bn254_snarks_g1_prj,
        n: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_scalar_mul_big_coef(
        P: *mut bn254_snarks_g1_prj,
        scalar: *const big254,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_scalar_mul_fr_coef(
        P: *mut bn254_snarks_g1_prj,
        scalar: *const bn254_snarks_fr,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_scalar_mul_big_coef_vartime(
        P: *mut bn254_snarks_g1_prj,
        scalar: *const big254,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_scalar_mul_fr_coef_vartime(
        P: *mut bn254_snarks_g1_prj,
        scalar: *const bn254_snarks_fr,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_multi_scalar_mul_big_coefs_vartime(
        r: *mut bn254_snarks_g1_prj,
        coefs: *const big254,
        points: *const bn254_snarks_g1_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bn254_snarks_g1_prj,
        coefs: *const bn254_snarks_fr,
        points: *const bn254_snarks_g1_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_is_eq(
        P: *const bn254_snarks_g2_aff,
        Q: *const bn254_snarks_g2_aff,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_is_neutral(P: *const bn254_snarks_g2_aff) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_set_neutral(P: *mut bn254_snarks_g2_aff);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_ccopy(
        P: *mut bn254_snarks_g2_aff,
        Q: *const bn254_snarks_g2_aff,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_is_on_curve(
        x: *const bn254_snarks_fp2,
        y: *const bn254_snarks_fp2,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_neg(P: *mut bn254_snarks_g2_aff, Q: *const bn254_snarks_g2_aff);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_neg_in_place(P: *mut bn254_snarks_g2_aff);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_is_eq(
        P: *const bn254_snarks_g2_jac,
        Q: *const bn254_snarks_g2_jac,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_is_neutral(P: *const bn254_snarks_g2_jac) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_set_neutral(P: *mut bn254_snarks_g2_jac);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_ccopy(
        P: *mut bn254_snarks_g2_jac,
        Q: *const bn254_snarks_g2_jac,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_neg(P: *mut bn254_snarks_g2_jac, Q: *const bn254_snarks_g2_jac);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_neg_in_place(P: *mut bn254_snarks_g2_jac);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_cneg_in_place(P: *mut bn254_snarks_g2_jac, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_sum(
        r: *mut bn254_snarks_g2_jac,
        P: *const bn254_snarks_g2_jac,
        Q: *const bn254_snarks_g2_jac,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_add_in_place(
        P: *mut bn254_snarks_g2_jac,
        Q: *const bn254_snarks_g2_jac,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_diff(
        r: *mut bn254_snarks_g2_jac,
        P: *const bn254_snarks_g2_jac,
        Q: *const bn254_snarks_g2_jac,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_double(
        r: *mut bn254_snarks_g2_jac,
        P: *const bn254_snarks_g2_jac,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_double_in_place(P: *mut bn254_snarks_g2_jac);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_affine(
        dst: *mut bn254_snarks_g2_aff,
        src: *const bn254_snarks_g2_jac,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_from_affine(
        dst: *mut bn254_snarks_g2_jac,
        src: *const bn254_snarks_g2_aff,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_batch_affine(
        dst: *const bn254_snarks_g2_aff,
        src: *const bn254_snarks_g2_jac,
        n: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_scalar_mul_big_coef(
        P: *mut bn254_snarks_g2_jac,
        scalar: *const big254,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_scalar_mul_fr_coef(
        P: *mut bn254_snarks_g2_jac,
        scalar: *const bn254_snarks_fr,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_scalar_mul_big_coef_vartime(
        P: *mut bn254_snarks_g2_jac,
        scalar: *const big254,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_scalar_mul_fr_coef_vartime(
        P: *mut bn254_snarks_g2_jac,
        scalar: *const bn254_snarks_fr,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_multi_scalar_mul_big_coefs_vartime(
        r: *mut bn254_snarks_g2_jac,
        coefs: *const big254,
        points: *const bn254_snarks_g2_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bn254_snarks_g2_jac,
        coefs: *const bn254_snarks_fr,
        points: *const bn254_snarks_g2_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_is_eq(
        P: *const bn254_snarks_g2_prj,
        Q: *const bn254_snarks_g2_prj,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_is_neutral(P: *const bn254_snarks_g2_prj) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_set_neutral(P: *mut bn254_snarks_g2_prj);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_ccopy(
        P: *mut bn254_snarks_g2_prj,
        Q: *const bn254_snarks_g2_prj,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_neg(P: *mut bn254_snarks_g2_prj, Q: *const bn254_snarks_g2_prj);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_neg_in_place(P: *mut bn254_snarks_g2_prj);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_cneg_in_place(P: *mut bn254_snarks_g2_prj, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_sum(
        r: *mut bn254_snarks_g2_prj,
        P: *const bn254_snarks_g2_prj,
        Q: *const bn254_snarks_g2_prj,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_add_in_place(
        P: *mut bn254_snarks_g2_prj,
        Q: *const bn254_snarks_g2_prj,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_diff(
        r: *mut bn254_snarks_g2_prj,
        P: *const bn254_snarks_g2_prj,
        Q: *const bn254_snarks_g2_prj,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_double(
        r: *mut bn254_snarks_g2_prj,
        P: *const bn254_snarks_g2_prj,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_double_in_place(P: *mut bn254_snarks_g2_prj);
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_affine(
        dst: *mut bn254_snarks_g2_aff,
        src: *const bn254_snarks_g2_prj,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_from_affine(
        dst: *mut bn254_snarks_g2_prj,
        src: *const bn254_snarks_g2_aff,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_batch_affine(
        dst: *const bn254_snarks_g2_aff,
        src: *const bn254_snarks_g2_prj,
        n: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_scalar_mul_big_coef(
        P: *mut bn254_snarks_g2_prj,
        scalar: *const big254,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_scalar_mul_fr_coef(
        P: *mut bn254_snarks_g2_prj,
        scalar: *const bn254_snarks_fr,
    );
}
